--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -5,14 +5,19 @@
         <h3 class="panel-title">Logged Activities</h3>
       </div>
       <div id="recent_activity" class="list-group">
-        {{#collection Ember.ListView contentBinding="controller" height=500 rowHeight=1}}
-          {{#link-to "activity" this id=this.id class="list-group-item"}}{{dateTime this.createdAt}} - {{this.exercise.name}}{{/link-to}}
-        {{/collection}}
-{{!--         {{#each controller}}
+        <ul class="pager">  
+          {{#unless noPreviousPage}}        
+            <li><a href="#" {{action 'previousPage'}}>Previous</a></li>
+          {{/unless}}
+          {{#unless noNextPage}}
+            <li><a href="#" {{action 'nextPage'}}>Next</a></li>
+          {{/unless}}
+        </ul>
+        {{#each currentPage}}
           {{#link-to "activity" this id=this.id class="list-group-item"}}{{dateTime this.createdAt}} - {{this.exercise.name}}{{/link-to}}
         {{else}}
           <div class="list-group-item">You haven't logged any activities yet! Go log some!</div>
-        {{/each}} --}}
+        {{/each}}
       </div>
     </div>
   </div>
