--- a/app/assets/javascripts/templates/profile/stats.hbs
+++ b/app/assets/javascripts/templates/profile/stats.hbs
@@ -5,4 +5,7 @@
   <div class="panel-body">
     {{view WorkoutWars.UserStatView}}
   </div>
+  <div class="panel-body">
+    {{view WorkoutWars.UserExperienceView}}
+  </div>
 </div>
