--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -21,3 +21,15 @@ div.loading-gif {
   overflow-y: scroll;
   border: 1px solid #eee;
 }
+
+.finished { 
+  color: #b94a48;
+}
+
+.started {
+  color: #317eac;
+}
+
+.unstarted {
+  color: #468847;
+}
