--- a/app/assets/javascripts/templates/_started_competition.hbs
+++ b/app/assets/javascripts/templates/_started_competition.hbs
@@ -5,7 +5,7 @@
       <table class="table">
         <tr>
           <td colspan="2">
-            <h3 class="text-danger text-center">The competition has started</h3>
+            <h3 class="text-info text-center">The competition has started</h3>
           </td>
         </tr>
         <tr>
