--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -14,7 +14,11 @@
           {{/unless}}
         </ul>
         {{#each currentPage}}
-          {{#link-to "activity" this id=this.id class="list-group-item"}}{{dateTime this.createdAt}} - {{this.exercise.name}}{{/link-to}}
+          {{#unless this.isDeleted}}
+            {{#link-to "activity" this id=this.id class="list-group-item"}}
+              {{dateTime this.createdAt}} - {{this.exercise.name}}
+            {{/link-to}}
+          {{/unless}}
         {{else}}
           <div class="list-group-item">You haven't logged any activities yet! Go log some!</div>
         {{/each}}
