--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -13,7 +13,7 @@
           <span class="badge"><span class="glyphicon glyphicon-stats"></span></span>
           Stats
         {{/link-to}}
-        {{#link-to "profile.exercises" class="list-group-item"}}
+        {{#link-to "exercises" class="list-group-item"}}
           <span class="badge"><span class="glyphicon glyphicon-certificate"></span></span>
           Custom Exercises
         {{/link-to}}
