--- a/app/assets/javascripts/templates/custom_exercises/create.hbs
+++ b/app/assets/javascripts/templates/custom_exercises/create.hbs
@@ -12,8 +12,8 @@
           optionLabelPath='content.name' 
           class="form-control" 
           prompt="Please select a metric"}}
-    {{#if model.metric}}
-      {{#form-for model wrapper="bootstrap"}}
+    {{#if this.model.metric}}
+      {{#form-for this.model wrapper="bootstrap"}}
         {{input name}}
         {{input description as="text"}}
         {{input experienceMultiplier}}
