--- a/app/assets/javascripts/templates/custom_exercises/create.hbs
+++ b/app/assets/javascripts/templates/custom_exercises/create.hbs
@@ -5,7 +5,7 @@
   <div class="panel-body">
     <label class= "control-label">Select Exercise Metric</label>
     {{view Ember.Select 
-          name="Win Condition Select"
+          name="Metric Select"
           content=metrics  
           value=this.model.metric
           optionValuePath="content" 
