--- a/app/assets/javascripts/templates/custom_exercise.hbs
+++ b/app/assets/javascripts/templates/custom_exercise.hbs
@@ -4,9 +4,12 @@
   </div>
   <div class="panel-body">        
     <a href="#" class="btn btn-danger pull-right" {{action "delete" this}}>Delete</a>
+    
     <h2>{{this.exercise.name}}</h2>
-    <p>{{this.exercise.description}}</p>
-    <p>{{this.exercise.experienceMultiplier}}</p>
-    <p>Created At: {{date this.exercise.createdAt}}</p>
+    <p><strong>Creator:</strong> {{this.user.handle}}</p>
+    <p><strong>Description:</strong> {{this.exercise.description}}</p>
+    <p><strong>Measurement:</strong> {{this.exercise.metric.name}}</p>
+    <p><strong>Experience Multiplier:</strong> {{this.exercise.experienceMultiplier}}</p>
+    <p><strong>Created At:</strong> {{date this.exercise.createdAt}}</p>
   </div>
 </div>
