update sign out cucumber and makes image responsive

--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="jumbotron">
-    <img src="/assets/ww-logo-large.png" />
+    <img src="/assets/ww-logo-large.png" class="img-responsive" />
     <h1><p class="text-danger">ALPHA</p></h1>
     <p>Get ready to take your fitness to the next level.</p>
   </div>
