--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -1,5 +1,5 @@
 <!-- Fixed navbar -->
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -63,10 +63,11 @@
   {{outlet modal}}
   {{view WorkoutWars.FlashView model=WorkoutWars.flash}}
   {{outlet}}
+  <br>
 </div> <!-- /container -->
 
 <!-- FOOTER -->
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
   <footer id="main-footer">
     <p class="text-center text-primary">&copy; 2013 Senior Project for Cody Tanner, Joey Gibson, John Hanks, and Charmaine Keck &middot; {{#link-to 'privacy'}}Privacy{{/link-to}} &middot; {{#link-to 'privacy'}}Terms{{/link-to}}</p>
   </footer>
