--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -33,3 +33,15 @@ div.loading-gif {
 .unstarted {
   color: #468847;
 }
+
+body { padding-top: 70px; }
+
+/*.full-height {
+  height: 100%;
+  min-height: 100%;
+}
+
+html, body {
+  height: 100%;
+  min-height: 100%;
+}*/
