--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -36,6 +36,11 @@ div.loading-gif {
 
 body { padding-top: 70px; }
 
+#main-footer {
+  height: 20px;
+  background: #DDDDDD;
+}
+
 /*.full-height {
   height: 100%;
   min-height: 100%;
