--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -64,11 +64,12 @@
   {{view WorkoutWars.FlashView model=WorkoutWars.flash}}
   {{outlet}}
   <br>
+  <br>
 </div> <!-- /container -->
 
 <!-- FOOTER -->
-<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+<nav class="navbar-fixed-bottom" role="navigation">
   <footer id="main-footer">
-    <p class="text-center text-primary">&copy; 2013 Senior Project for Cody Tanner, Joey Gibson, John Hanks, and Charmaine Keck &middot; {{#link-to 'privacy'}}Privacy{{/link-to}} &middot; {{#link-to 'privacy'}}Terms{{/link-to}}</p>
+    <p class="text-center text-default">&copy; 2013 Senior Project for Cody Tanner, Joey Gibson, John Hanks, and Charmaine Keck &middot; {{#link-to 'privacy'}}Privacy{{/link-to}} &middot; {{#link-to 'privacy'}}Terms{{/link-to}}</p>
   </footer>
 </nav>
