update custom exercise

--- a/app/assets/javascripts/templates/custom_exercise.hbs
+++ b/app/assets/javascripts/templates/custom_exercise.hbs
@@ -7,9 +7,9 @@
     
     <h2>{{this.exercise.name}}</h2>
     <p><strong>Creator:</strong> {{this.user.handle}}</p>
-    <p><strong>Description:</strong> {{this.exercise.description}}</p>
-    <p><strong>Measurement:</strong> {{this.exercise.metric.name}}</p>
-    <p><strong>Experience Multiplier:</strong> {{this.exercise.experienceMultiplier}}</p>
-    <p><strong>Created At:</strong> {{date this.exercise.createdAt}}</p>
+    <p><strong>Description:</strong> {{this.description}}</p>
+    <p><strong>Measurement:</strong> {{this.metric.name}}</p>
+    <p><strong>Experience Multiplier:</strong> {{this.experienceMultiplier}}</p>
+    <p><strong>Created At:</strong> {{date this.createdAt}}</p>
   </div>
 </div>
