--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -43,9 +43,9 @@
           </a>
         </li>
         <li>
-          {{#link-to "contact"}}
-            <span class="badge"><span class="glyphicon glyphicon-send"></span></span>
-            Contact us
+          {{#link-to "exercises"}}
+            <span class="badge"><span class="glyphicon glyphicon-certificate"></span></span>
+            Exercises
           {{/link-to}}
         </li>
         <li>
@@ -69,7 +69,7 @@
 
 <!-- FOOTER -->
 <nav class="navbar-fixed-bottom" role="navigation">
-  <footer id="main-footer">
-    <p class="text-center text-default">&copy; 2013 Senior Project for Cody Tanner, Joey Gibson, John Hanks, and Charmaine Keck &middot; {{#link-to 'privacy'}}Privacy{{/link-to}} &middot; {{#link-to 'privacy'}}Terms{{/link-to}}</p>
+  <footer id="main-footer">       
+    <p class="text-center text-default">&copy; 2013 Senior Project for Cody Tanner, Joey Gibson, John Hanks, and Charmaine Keck &middot; {{#link-to 'privacy'}}Privacy{{/link-to}} &middot; {{#link-to 'privacy'}}Terms{{/link-to}} &middot; {{#link-to "contact"}}Contact us{{/link-to}}</p>
   </footer>
 </nav>
