--- a/app/assets/javascripts/templates/exercises.hbs
+++ b/app/assets/javascripts/templates/exercises.hbs
@@ -1,24 +1,26 @@
 <div class="row">
-  <div class="col-md-6">
-    <div class="panel panel-info">
+  <div class="col-md-3">
+    {{#link-to "competitions.create" class="btn btn-info btn-block"}}Request New Competition{{/link-to}}
+    <hr>
+    <div class="panel panel-danger">
       <div class="panel-heading">
-        <h3 class="panel-title">Custom Exercises</h3>
+        {{#link-to 'competitions'}}<h3 class="panel-title">Existing Exercises</h3>{{/link-to}}
       </div>
       <div class="list-group">
         {{#each controller}}
-          {{#unless this.isDeleted}}
-            {{#link-to "exercise" this id=this.id class="list-group-item"}}
-              {{dateTime this.createdAt}} - {{name}}
+          {{#unless isDirty}}
+            {{#link-to "exercise" this class="list-group-item"}}
+              <span {{bind-attr class="this.status"}}>{{name}}</span>
             {{/link-to}}
           {{/unless}}
         {{else}}
-          <div class="list-group-item">You haven't logged any activities yet! Go log some!</div>
+          <a href="#" class="list-group-item">There are no exercises.</a>
         {{/each}}
       </div>
     </div>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-md-9">
     {{outlet}}
   </div>
 </div>
