--- a/app/assets/javascripts/templates/exercises/create.hbs
+++ b/app/assets/javascripts/templates/exercises/create.hbs
@@ -1,6 +1,6 @@
 <div class="panel panel-info">
   <div class="panel-heading">
-    <h3 class="panel-title">Create Custom Exercise</h3>
+    <h3 class="panel-title">Create Exercise</h3>
   </div>
   <div class="panel-body">
     <label class= "control-label">Select Exercise Metric</label>
