--- a/app/assets/javascripts/templates/log_activity.hbs
+++ b/app/assets/javascripts/templates/log_activity.hbs
@@ -5,9 +5,9 @@
 {{#form-for model wrapper="bootstrap"}}
   {{view WorkoutWars.ModalFlashView model=WorkoutWars.modalFlash}}
   <div class="modal-body">
-    {{view Ember.Select content=exercises name="Exercise Select" value=selectedExercise optionValuePath="content" optionLabelPath='content.name' class="form-control" prompt="Please select an exercise"}}
-    {{#if selectedExercise}}
-      {{input value placeholder=selectedExercise.metric.measurement}}
+    {{view Ember.Select content=alphabeticalExercises name="Exercise Select" value=model.exercise optionValuePath="content" optionLabelPath='content.name' class="form-control" prompt="Please select an exercise"}}
+    {{#if model.exercise}}
+      {{input value placeholder=model.exercise.metric.measurement}}
     {{/if}}
   </div>
   <div class="modal-footer">
