adds add exercise test

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to "index" classNames="navbar-brand"}}<img src="/assets/ww-gray.png" height="22" class=""></img> {{/link-to}}
+      {{#link-to "index" classNames="navbar-brand"}}<img src="/assets/ww-gray.png" height="22"></img> {{/link-to}}
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -17,6 +17,12 @@
             <span class="badge"><span class="glyphicon glyphicon-user"></span></span>
             My Profile
           {{/link-to}}
+        </li>
+        <li>
+          <a href="#" {{action "logActivity"}} name="Log Activity">
+            <span class="badge"><span class="glyphicon glyphicon-pencil"></span></span>
+            Log Activity
+          </a>
         </li>
         <li>
           {{#link-to "users"}}
@@ -36,12 +42,6 @@
             Challenges
           {{/link-to}}
         </li>   
-        <li>
-          <a href="#" {{action "logActivity"}} name="Log Activity">
-            <span class="badge"><span class="glyphicon glyphicon-certificate"></span></span>
-            Log Activity
-          </a>
-        </li>
         <li>
           {{#link-to "exercises"}}
             <span class="badge"><span class="glyphicon glyphicon-certificate"></span></span>
