--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -6,7 +6,7 @@
       </div>
       <div class="list-group profile-navigation">
         {{#link-to "activities" class="list-group-item"}}
-          <span class="badge"><span class="glyphicon glyphicon-certificate"></span></span>
+          <span class="badge"><span class="glyphicon glyphicon-pencil"></span></span>
           Activities
         {{/link-to}}
         {{#link-to "profile.stats" class="list-group-item"}}
