sorts joins for competitions

--- a/app/assets/javascripts/templates/_finished_competition.hbs
+++ b/app/assets/javascripts/templates/_finished_competition.hbs
@@ -55,7 +55,7 @@
 <div class="panel panel-danger">
   <div class="panel-heading"><h3 class="panel-title">Leaderboard</h3></div>
   <ul class="list-group">      
-    {{#each compJoin in sortedJoins}}
+    {{#each compJoin in rankedJoins}}
       <li class="list-group-item">
         {{#if compJoin.rank}}<h4>Rank: {{compJoin.rank}}</h4>{{/if}}
         <h5>User: {{compJoin.user.handle}}</h5>
