--- a/app/assets/javascripts/templates/_unstarted_competition.hbs
+++ b/app/assets/javascripts/templates/_unstarted_competition.hbs
@@ -117,7 +117,7 @@
       <div class="panel-heading"><h3 class="panel-title">Users</h3></div>
       <div class="panel-body">
         <ul class="list-group">      
-          {{#each compJoin in sortedJoins}}
+          {{#each compJoin in rankedJoins}}
             {{#unless compJoin.isDeleted}}
             <li class="list-group-item">
               <div class="row">
