sort challenge attempts

--- a/app/assets/javascripts/templates/challenge.hbs
+++ b/app/assets/javascripts/templates/challenge.hbs
@@ -39,7 +39,7 @@
         <th colspan="2">Attempted On</th>
       </tr>
     </thead>
-    {{#each attempt in attempts}}
+    {{#each attempt in rankedAttempts}}
       <tr>
         <td>{{index _view.contentIndex}}</td>
         <td>{{attempt.user.handle}}</td>
