--- a/app/assets/javascripts/templates/_finished_competition.hbs
+++ b/app/assets/javascripts/templates/_finished_competition.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-8">
     <div class="panel panel-danger">
-      <div class="panel-heading"><h3 class="panel-title">Information</h3></div>
+      <div class="panel-heading"><h3 class="panel-title">Information for {{name}}</h3></div>
       <table class="table">
         <tr>
           <td colspan="2">
