--- a/app/assets/javascripts/templates/_unstarted_competition.hbs
+++ b/app/assets/javascripts/templates/_unstarted_competition.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-8">
     {{outlet}}
     <div class="panel panel-danger">
-      <div class="panel-heading"><h3 class="panel-title">Information</h3></div>
+      <div class="panel-heading"><h3 class="panel-title">Information for {{name}}</h3></div>
       <table class="table">
         <tr>
           <td colspan="2">
