--- a/app/assets/javascripts/templates/challenges/index.hbs
+++ b/app/assets/javascripts/templates/challenges/index.hbs
@@ -3,6 +3,7 @@
     <h3 class="panel-title">Challenges</h3>
   </div>
   <div class="panel-body">
+    <img src="/assets/situp.jpg" alt="challenges" class="img-rounded img-responsive">
     <p>Challenges are a great way for you to <strong>compete against yourself</strong> as well as others. They will motivate you to be the best you can be.</p>
     <p class="text-warning">Bring the pain!</p>
   </div>
