--- a/app/assets/javascripts/templates/competitions/index.hbs
+++ b/app/assets/javascripts/templates/competitions/index.hbs
@@ -3,6 +3,7 @@
     <h3 class="panel-title">Competitions</h3>
   </div>
   <div class="panel-body">
+    <img src="/assets/pushup.png" alt="competitions" class="img-rounded img-responsive">
     <p>Competitions are the <strong>best way to get great results</strong>. They will motivate you to workout harder than you have ever been motivated before.</p>
     <p class="text-warning">There can be only one winner!</p>
     <p class="text-success">Select one from the left</p>
