--- a/app/assets/javascripts/templates/users/index.hbs
+++ b/app/assets/javascripts/templates/users/index.hbs
@@ -3,6 +3,7 @@
     <h3 class="panel-title">Information for other Users</h3>
   </div>
   <div class="panel-body">
+    <img src="/assets/pushup2.jpg" alt="challenges" class="img-rounded img-responsive">
     <p>The people are both your friend, and your enemy.They will push you to your max, but if you want to win, you've got to bring the pain. </p>
     <p class="text-success">Select one from the left to view their profile</p>
   </div>
