--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -23,7 +23,7 @@
       {{#each user in controller}}
       <tr>
         <td>{{user.handle}}</td>
-        <td>{{avatarUrl user}}</td>
+        <td>{{gravatarUrlSmall user}}</td>
         <td><span class="badge">{{user.level}}</span></td>               
         <td><span class="badge">{{user.experience}}</span></td>
       </tr>
