--- a/app/assets/javascripts/templates/profile/index.hbs
+++ b/app/assets/javascripts/templates/profile/index.hbs
@@ -1,11 +1,11 @@
 <div class="panel panel-info">
   <div class="panel-heading">
-    <h3 class="panel-title">Profile</h3>
+    <h3 class="panel-title">Profile for {{name}}</h3>
   </div>
   <div class="panel-body">
     <div class="row">
       <div class="col-md-8">
-        <p>Name: {{name}}
+        <blockquote>
         <p>Email: {{email}}</p>
         <p>Nickname: {{nickname}}</p>
         <p>Age: {{age}}</p>
@@ -14,6 +14,7 @@
         <p>Level: {{level}}</p>
         <p>Experience: {{experience}}</p>
         <p>Experience to next level: {{nextLevelExperience}}</p>
+        </blockquote>
       </div>
 
       <div class="col-md-4">
