updating index page

--- a/app/assets/javascripts/templates/challenges/index.hbs
+++ b/app/assets/javascripts/templates/challenges/index.hbs
@@ -3,8 +3,17 @@
     <h3 class="panel-title">Challenges</h3>
   </div>
   <div class="panel-body">
-    <img src="/assets/situp.jpg" alt="challenges" class="img-rounded img-responsive">
-    <p>Challenges are a great way for you to <strong>compete against yourself</strong> as well as others. They will motivate you to be the best you can be.</p>
-    <p class="text-warning">Bring the pain!</p>
+    <div class="row">
+      <div class="col-sm-6">
+        <h2 class="featurette-heading">Compete against your personal best <span class="text-muted">And everyone else's.</span></h2>
+        <p class="lead">Challenges are a great way for you to <strong>compete against yourself</strong> as well as others. See how much you can do in one set, or how much can do in one minute. Either way you'll feel it tomorrow</p>
+        <p class="lead text-success">Select a challenge from the left to make an attempt</p>
+        <p class="text-warning">Whenever you are going for max reps, don't compromise form for more reps!</p>
+      </div>
+
+      <div class="col-sm-6">
+        <img src="/assets/situp.jpg" alt="challenges" class="img-rounded img-responsive">
+      </div>
+    </div>
   </div>
 </div>
