--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -4,7 +4,7 @@
     <hr>
     <div class="panel panel-danger">
       <div class="panel-heading">
-        {{#link-to 'competitions'}}<h3 class="panel-title">New Competitions</h3>{{/link-to}}
+        {{#link-to 'competitions'}}<h3 class="panel-title">Active Competitions</h3>{{/link-to}}
       </div>
       <div class="list-group">
         {{#each controller}}
