--- a/app/assets/javascripts/templates/competitions/index.hbs
+++ b/app/assets/javascripts/templates/competitions/index.hbs
@@ -3,10 +3,18 @@
     <h3 class="panel-title">Competitions</h3>
   </div>
   <div class="panel-body">
-    <img src="/assets/pushup.png" alt="competitions" class="img-rounded img-responsive">
-    <p>Competitions are the <strong>best way to get great results</strong>. They will motivate you to workout harder than you have ever been motivated before.</p>
-    <p class="text-warning">There can be only one winner!</p>
-    <p class="text-success">Select one from the left</p>
+    <div class="row">
+      <div class="col-sm-6">
+        <h2 class="featurette-heading">The Bread and butter of WorkoutWars</h2>
+        <p class="lead">Competitions are the <strong>best way to get great results</strong>. They will motivate you to workout harder than you have ever been motivated before.</p>
+        <p class="lead text-success">Select a competition from the left to join</p>
+        <p class="text-warning">There can only be one winner!</p>
+      </div>
+
+      <div class="col-sm-6">
+        <img src="/assets/pushup.png" alt="competitions" class="img-rounded img-responsive">
+      </div>
+    </div>
   </div>
 </div>
 
