--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
             <li><%= link_to "Home", unauthenticated_root_path %></li>
             <li><%= link_to "Sign In", new_user_session_path, id: "sign_in_button" %></li>
             <li><%= link_to "Sign up", new_user_registration_path, id: "sign_up_button" %></li>
+            <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
