--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -8,50 +8,57 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to "index" classNames="navbar-brand"}}<img src="/assets/ww-gray.png" height="22"></img> {{/link-to}}
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-          {{#link-to "profile" currentUser name="My Profile"}}
-            <span class="badge"><span class="glyphicon glyphicon-user"></span></span>
-            My Profile
+        <li class="text-center">
+          {{#link-to "index"}}
+            <i class="fa fa-home fa-4x"></i><br>
+            WW
           {{/link-to}}
         </li>
-        <li>
-          <a href="#" {{action "logActivity"}} name="Log Activity">
-            <span class="badge"><span class="glyphicon glyphicon-pencil"></span></span>
-            Log Activity
-          </a>
+        <li class="text-center">
+          {{#link-to "profile" currentUser name="My Profile"}}
+            <i class="fa fa-dashboard fa-4x"></i><br>
+            Dashboard
+          {{/link-to}}
         </li>
-        <li>
+        <li class="text-center">
           {{#link-to "users"}}
-            <span class="badge"><span class="glyphicon glyphicon-eye-open"></span></span>
+            <i class="fa fa-group fa-4x"></i><br>
             Users            
           {{/link-to}}
         </li>
-        <li>
+        <li class="text-center">
           {{#link-to "competitions"}}
-            <span class="badge"><span class="glyphicon glyphicon-star-empty"></span></span>
+            <i class="fa fa-crosshairs fa-4x"></i><br>
             Competitions
           {{/link-to}}
         </li> 
-        <li>
+        <li class="text-center">
           {{#link-to "challenges"}}
-            <span class="badge"><span class="glyphicon glyphicon-star"></span></span>
+            <i class="fa fa-flag fa-4x"></i><br>
             Challenges
           {{/link-to}}
         </li>   
-        <li>
+        <li class="text-center">
           {{#link-to "exercises"}}
-            <span class="badge"><span class="glyphicon glyphicon-certificate"></span></span>
+            <i class="fa fa-asterisk fa-4x"></i><br>
             Exercises
           {{/link-to}}
         </li>
+        <li class="text-center">
+          {{#link-to "profile.edit" currentUser name="My Profile"}}
+            <i class="fa fa-gears fa-4x"></i><br>
+            Settings
+          {{/link-to}}
+        </li>
+      </ul>
+      <ul class="nav navbar-nav pull-right">
         <li>
           <a href="/users/sign_out" data-method="delete" id='sign_out_button'>
-            <span class="badge"><span class="glyphicon glyphicon-off"></span></span>
-            Sign out
+            <i class="fa fa-sign-out fa-4x"></i><br>
+            Logout
           </a>
         </li>
       </ul>
