--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-3">
     {{#link-to "competitions.create" class="btn btn-info btn-block"}}New Competition{{/link-to}}
     <hr>
-    <div class="panel panel-danger">
+    <div class="panel panel-info">
       <div class="panel-heading">
         {{#link-to 'competitions'}}<h3 class="panel-title">Active Competitions</h3>{{/link-to}}
       </div>
