--- a/app/assets/javascripts/templates/exercises.hbs
+++ b/app/assets/javascripts/templates/exercises.hbs
@@ -4,7 +4,7 @@
     <hr>
     <div class="row">
       <div class="col-md-6">
-        <div class="panel panel-danger">
+        <div class="panel panel-info">
           <div class="panel-heading">
             {{#link-to 'competitions'}}<h3 class="panel-title">Existing Exercises</h3>{{/link-to}}
           </div>
@@ -23,7 +23,7 @@
       </div>
 
       <div class="col-md-6">
-        <div class="panel panel-danger">
+        <div class="panel panel-info">
           <div class="panel-heading">
             {{#link-to 'competitions'}}<h3 class="panel-title">Pending Exercises</h3>{{/link-to}}
           </div>
