--- a/app/assets/javascripts/templates/_started_competition.hbs
+++ b/app/assets/javascripts/templates/_started_competition.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8">
-    <div class="panel panel-danger">
+    <div class="panel panel-info">
       <div class="panel-heading"><h3 class="panel-title">Information for {{name}}</h3></div>
       <table class="table">
         <tr>
@@ -51,7 +51,7 @@
   </div>
     
   <div class="col-md-4">
-    <div class="panel panel-danger">
+    <div class="panel panel-info">
       <div class="panel-heading"><h3 class="panel-title">Exercises</h3></div>
       <ul class="list-group">      
         {{#each compExercise in controller.competitionExercises}}
@@ -62,7 +62,7 @@
   </div> 
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-info">
   <div class="panel-heading"><h3 class="panel-title">Leaderboard</h3></div>
   <ul class="list-group">    
     {{#each compJoin in rankedJoins}}
