--- a/app/assets/javascripts/templates/_unstarted_competition.hbs
+++ b/app/assets/javascripts/templates/_unstarted_competition.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-8">
     {{outlet}}
-    <div class="panel panel-danger">
+    <div class="panel panel-info">
       <div class="panel-heading"><h3 class="panel-title">Information for {{name}}</h3></div>
       <table class="table">
         <tr>
@@ -48,7 +48,7 @@
   </div> 
 
   <div class="col-md-4">
-    <div class="panel panel-danger">
+    <div class="panel panel-info">
       <div class="panel-heading"><h3 class="panel-title">Actions</h3></div>
       <div class="panel-body">
         <ul class="list-group">
@@ -77,7 +77,7 @@
 
 <div class="row">
   <div class="col-md-8">
-    <div class="panel panel-danger">
+    <div class="panel panel-info">
       <div class="panel-heading"><h3 class="panel-title">Exercises</h3></div> 
       <div class="panel-body">
       {{#if canUpdate}}
@@ -113,7 +113,7 @@
   </div> 
 
   <div class="col-md-4">
-    <div class="panel panel-danger">
+    <div class="panel panel-info">
       <div class="panel-heading"><h3 class="panel-title">Users</h3></div>
       <div class="panel-body">
         <ul class="list-group">      
