--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -13,51 +13,51 @@
       <ul class="nav navbar-nav">
         <li class="text-center">
           {{#link-to "index"}}
-            <i class="fa fa-home fa-4x"></i><br>
+            <i class="fa fa-home fa-3x"></i><br>
             WW
           {{/link-to}}
         </li>
         <li class="text-center">
+          <a href="#" {{action "logActivity"}} name="Log Activity">
+            <i class="fa fa-bolt fa-3x"></i><br>
+            Log Activity
+          </a>
+        </li>
+        <li class="text-center">
           {{#link-to "profile" currentUser name="My Profile"}}
-            <i class="fa fa-dashboard fa-4x"></i><br>
-            Dashboard
+            <i class="fa fa-dashboard fa-3x"></i><br>
+            Profile
           {{/link-to}}
         </li>
         <li class="text-center">
           {{#link-to "users"}}
-            <i class="fa fa-group fa-4x"></i><br>
+            <i class="fa fa-group fa-3x"></i><br>
             Users            
           {{/link-to}}
         </li>
         <li class="text-center">
           {{#link-to "competitions"}}
-            <i class="fa fa-crosshairs fa-4x"></i><br>
+            <i class="fa fa-crosshairs fa-3x"></i><br>
             Competitions
           {{/link-to}}
         </li> 
         <li class="text-center">
           {{#link-to "challenges"}}
-            <i class="fa fa-flag fa-4x"></i><br>
+            <i class="fa fa-flag fa-3x"></i><br>
             Challenges
           {{/link-to}}
         </li>   
         <li class="text-center">
           {{#link-to "exercises"}}
-            <i class="fa fa-asterisk fa-4x"></i><br>
+            <i class="fa fa-asterisk fa-3x"></i><br>
             Exercises
-          {{/link-to}}
-        </li>
-        <li class="text-center">
-          {{#link-to "profile.edit" currentUser name="My Profile"}}
-            <i class="fa fa-gears fa-4x"></i><br>
-            Settings
           {{/link-to}}
         </li>
       </ul>
       <ul class="nav navbar-nav pull-right">
         <li>
           <a href="/users/sign_out" data-method="delete" id='sign_out_button'>
-            <i class="fa fa-sign-out fa-4x"></i><br>
+            <i class="fa fa-sign-out fa-3x"></i><br>
             Logout
           </a>
         </li>
