--- a/app/assets/javascripts/templates/challenge.hbs
+++ b/app/assets/javascripts/templates/challenge.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <div class="panel panel-danger">
+    <div class="panel panel-info">
       <div class="panel-heading"><h3 class="panel-title">Information</h3></div>
       <table class="table">
         <tr>
@@ -28,7 +28,7 @@
   </div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-info">
   <div class="panel-heading"><h3 class="panel-title">Leaderboard</h3></div>
   <table class="table leaderboard">
     <thead>
