--- a/app/assets/javascripts/templates/challenge/edit.hbs
+++ b/app/assets/javascripts/templates/challenge/edit.hbs
@@ -1,6 +1,6 @@
 <h1>Coming Soon!</h1>
 
-{{!-- <div class="panel panel-danger">
+{{!-- <div class="panel panel-info">
   <div class="panel-heading">
     <h3 class="panel-title">Challenge Settings</h3>
   </div>
