--- a/app/assets/javascripts/templates/challenge/new_attempt.hbs
+++ b/app/assets/javascripts/templates/challenge/new_attempt.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
+<div class="panel panel-info">
   <div class="panel-heading"><h3 class="panel-title">Log Attempt</h3></div>
   <ul class="list-group">      
     {{#form-for model wrapper="bootstrap"}}
