--- a/app/assets/javascripts/templates/challenges.hbs
+++ b/app/assets/javascripts/templates/challenges.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-3">
     {{#link-to "challenges.create" class="btn btn-info btn-block"}}New Challenge{{/link-to}}
     <hr>
-    <div class="panel panel-danger">
+    <div class="panel panel-info">
       <div class="panel-heading">
         {{#link-to 'challenges'}}<h3 class="panel-title">Active Challenges</h3>{{/link-to}}
       </div>
