--- a/app/assets/javascripts/templates/challenges/index.hbs
+++ b/app/assets/javascripts/templates/challenges/index.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-danger">
+<div class="panel panel-info">
   <div class="panel-heading">
     <h3 class="panel-title">Challenges</h3>
   </div>
