--- a/app/assets/javascripts/templates/contact.hbs
+++ b/app/assets/javascripts/templates/contact.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-2">
   </div>
   <div class="col-md-8">
-    <div class="panel panel-primary">
+    <div class="panel panel-info">
       <div class="panel-heading">
         <h3 class="panel-title">Contact Us</h3>
       </div>
