--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -9,7 +9,7 @@
 
   <h2 class="featurette-heading">Current User Levels <span class="text-muted">Join the madness</span></h2>
 
-  <div class="panel panel-danger">
+  <div class="panel panel-info">
     <table class="table table-hover">
       <thead>
         <tr class="active">
