--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3">
-    <div class="panel panel-primary">
+    <div class="panel panel-info">
       <div class="panel-heading">
         {{#link-to 'users'}}<h3 class="panel-title">Users</h3>{{/link-to}}
       </div>
