some css changes and competition filtering

--- a/app/assets/javascripts/templates/profile/index.hbs
+++ b/app/assets/javascripts/templates/profile/index.hbs
@@ -5,16 +5,16 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-md-8">
-        <blockquote>
-        <p>Email: {{email}}</p>
-        <p>Nickname: {{nickname}}</p>
-        <p>Age: {{age}}</p>
-        <p>Height: {{height}}</p>
-        <p>Weight: {{weight}}</p>
-        <p>Level: {{level}}</p>
-        <p>Experience: {{experience}}</p>
-        <p>Experience to next level: {{nextLevelExperience}}</p>
-        </blockquote>
+        <table class="table table-condensed table-bordered">
+        <tr><td><strong>Email:</strong> {{email}}</td></tr>
+        <tr><td><strong>Nickname:</strong> {{nickname}}</td></tr>
+        <tr><td><strong>Age:</strong> {{age}}</td></tr>
+        <tr><td><strong>Height:</strong> {{height}}</td></tr>
+        <tr><td><strong>Weight:</strong> {{weight}}</td></tr>
+        <tr><td><strong>Level:</strong> {{level}}</td></tr>
+        <tr><td><strong>Experience:</strong> {{experience}}</td></tr>
+        <tr><td><strong>Experience to next level:</strong> {{nextLevelExperience}}</td></tr>
+        </table class="table">
       </div>
 
       <div class="col-md-4">
