--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -4,17 +4,35 @@
     <hr>
     <div class="panel panel-info">
       <div class="panel-heading">
-        {{#link-to 'competitions'}}<h3 class="panel-title">Active Competitions</h3>{{/link-to}}
+        Competition Filter
       </div>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <div class="checkbox">
+            <label>
+              {{input type="checkbox" checked=isUnstarted}} Not Started
+            </label>
+          </div>
+          <div class="checkbox">
+            <label>
+              {{input type="checkbox" checked=isStarted}} Started
+            </label>
+          </div>
+          <div class="checkbox">
+            <label>
+              {{input type="checkbox" checked=isFinished}} Finished
+            </label>
+          </div>
+        </li>
+      </ul>
+
       <div class="list-group">
-        {{#each controller}}
-          {{#unless isDirty}}
-            {{#link-to "competition" this class="list-group-item"}}
-              <span {{bind-attr class="this.status"}}>{{name}}</span>
-            {{/link-to}}
-          {{/unless}}
+        {{#each selectedCompetitions}}
+          {{#link-to "competition" this class="list-group-item"}}
+            <span {{bind-attr class="this.status"}}>{{name}}</span>
+          {{/link-to}}
         {{else}}
-          <a href="#" class="list-group-item">There are no competitions.</a>
+          <a href="#" class="list-group-item">There are currently no competitions.</a>
         {{/each}}
       </div>
     </div>
