--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,44 +1,54 @@
 <div class="row">
+  <div class="col-sm-10">
+    <h1>Competitions</h1>
+  </div>
+
+  <div class="col-sm-2">
+    {{#link-to "competitions.create" class="btn btn-success pull-right"}}
+      <i class="fa fa-plus fa-2x"></i><br>
+      New Competition
+    {{/link-to}}
+  </div>
+</div>
+<hr>
+<div class="row">
   <div class="col-md-3">
-    {{#link-to "competitions.create" class="btn btn-info btn-block"}}New Competition{{/link-to}}
-    <hr>
     <div class="panel panel-info">
       <div class="panel-heading">
-        Competition Filter
+        Status
       </div>
-      <ul class="list-group">
-        <li class="list-group-item">
-          <div class="checkbox">
-            <label>
-              {{input type="checkbox" checked=isUnstarted}} Not Started
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              {{input type="checkbox" checked=isStarted}} Started
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              {{input type="checkbox" checked=isFinished}} Finished
-            </label>
-          </div>
+      <ul class="nav nav-pills nav-stacked">
+        <li {{bind-attr class="showUnstarted:active"}}>
+          <a href="#" {{action "showCompetition" "showUnstarted"}}>Not Started</a>
+        </li>
+        <li {{bind-attr class="showStarted:active"}}>
+          <a href="#" {{action "showCompetition" "showStarted"}}>Started</a>
+        </li>
+        <li {{bind-attr class="showFinished:active"}}>
+          <a href="#" {{action "showCompetition" "showFinished"}}>Finished</a>
         </li>
       </ul>
+    </div>
+  </div>
 
+  <div class="col-md-3">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        Competitions
+      </div>
       <div class="list-group">
-        {{#each selectedCompetitions}}
+        {{#each currentCompetitions}}
           {{#link-to "competition" this class="list-group-item"}}
             <span {{bind-attr class="this.status"}}>{{name}}</span>
           {{/link-to}}
         {{else}}
-          <a href="#" class="list-group-item">There are currently no competitions.</a>
+          <a href="#" class="list-group-item">There are currently no competitions of the selected.</a>
         {{/each}}
       </div>
     </div>
   </div>
 
-  <div class="col-md-9">
+  <div class="col-md-6">
     {{outlet}}
   </div>
 </div>
